add the last api for seller sales

--- a/config.json
+++ b/config.json
@@ -6,12 +6,14 @@
     "product_condition": "new",
     "limit": 200,
     "host": "https://api.mercadolibre.com",
-    "items_attributes": "id,site_id,title,currency_id,seller_id,category_id,price,warrancy,shipping",
+    "items_attributes": "id,site_id,title,currency_id,seller_id,category_id,price,sale_terms,shipping",
+    "seller_attributes": "id,seller_reputation",
     "database": {
         "dataset_id": "desafio-meli-446617.ml_challenge",
         "tables": {
             "currencies": "currency_conversions",
-            "items": "items_details"
+            "items": "items_details",
+            "sellers": "sellers_details"
         }
     }
 }
